--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ a:active {
 	used ASPEN to analyze the production of Zinc Chloide as a simple model, and later using the numbers
 	to get a cost analysis in excel. With that information we compiled the data onto a PowerPoint presentation,
 	then recorded and edited the video for submission. Below is the video.</ml></p>
- 	 <p><video width="900" height="550" controls>
+ 	 <p><video width="100%" height="100%" controls>
    	 <source src="NUMMETH.mp4" type="video/mp4">
   	 <source src="NUMMETH.ogg" type="video/ogg"></p>
 		
