--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a:active {
         <section>
          <h1>More Links</h1>
 
-	  <p><ml><u><a href="/Website/WilliamZhuResume2024.pdf" target="_blank" rel="noopener noreferrer" download><span style="color: black;"> Resume Download</span></u></ml></p>
+	  <p><ml><u><a href="WilliamZhuResume2024.pdf" target="_blank" rel="noopener noreferrer" download><span style="color: black;"> Resume Download</span></u></ml></p>
 	  <p><ml><u><a href="https://github.com/WillZhu4" target="_blank" rel="noopener noreferrer"><span style="color: black;">GitHub</span></a></u></ml></p>
 	  <p><ml><u><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><span style="color: black;">LinkedIn</span></a></u></ml></p>
 
