--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:active {
       <div class="name-hero">
 
 
-       <div class="mineimg" width="200" height="300"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg"></a></div>
+       <div class="mineimg" height="400"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg"></a></div>
         <div class="name-text">
 
         <h1>William <em>Zhu</em></h1>
