--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:active {
       <div class="name-hero">
 
 
-       <div class="mineimg" height="400"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg"></a></div>
+       <div class="mineimg" style="height:0px;"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg" width="auto" height="610"></a></div>
         <div class="name-text">
 
         <h1>William <em>Zhu</em></h1>
@@ -136,7 +136,7 @@ a:active {
         <section>
          <h1>More Links</h1>
 
-	  <p><ml><u><a href="WilliamZhuResume2024.pdf" target="_blank" rel="noopener noreferrer" download><span style="color: black;"> Resume Download</span></u></ml></p>
+	  <p><ml><u><a href="/Website/WilliamZhuResume2024.pdf" target="_blank" rel="noopener noreferrer" download><span style="color: black;"> Resume Download</span></u></ml></p>
 	  <p><ml><u><a href="https://github.com/WillZhu4" target="_blank" rel="noopener noreferrer"><span style="color: black;">GitHub</span></a></u></ml></p>
 	  <p><ml><u><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><span style="color: black;">LinkedIn</span></a></u></ml></p>
 
