--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a:active {
       <div class="name-hero">
 
 
-       <div class="mineimg" style="height:0px;"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg" width="auto" height="610"></a></div>
+       <div class="mineimg" style="height:0px;"><a href="https://www.linkedin.com/in/william-zhu-5a5bb7252/" target="_blank" rel="noopener noreferrer"><img src="myself.jpg" width="auto" height="auto"></a></div>
         <div class="name-text">
 
         <h1>William <em>Zhu</em></h1>
